kubernetes-manifests/cleanup.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nas-cleanup
  namespace: iiqstack
spec:
  nodeSelector:
    kubernetes.io/hostname: kubernetes5
  containers:
  - name: nas-cleanup
    image: busybox
    command: ["sh", "-c", "rm -rf /mnt/ldap/data/* /mnt/ldap/config/*; echo CLEANUP DONE"]
    volumeMounts:
    - name: ldap-storage
      mountPath: /mnt/ldap
  volumes:
  - name: ldap-storage
    persistentVolumeClaim:
      claimName: ldap-persistent-storage-ldap-0
  restartPolicy: Never
