kubernetes-manifests/dind-builder.yaml
apiVersion: v1
kind: Pod
metadata:
  name: docker-builder
  namespace: default
spec:
  containers:
  - name: dind
    image: docker:dind
    securityContext:
      privileged: true
    command:
    - dockerd
    - --insecure-registry=192.168.0.236:5000
