kubernetes-manifests/live-iiq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: iiq
  name: iiq
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iiq
  template:
    metadata:
      labels:
        app: iiq
    spec:
      containers:
      - env:
        - name: DATABASE_TYPE
          value: mssql
        - name: MSSQL_HOST
          value: db
        - name: MSSQL_SA_USER
          value: identityiq
        - name: MSSQL_USER
          value: identityiq
        - name: MSSQL_PASS
          value: Id3nt!tyIQ2026
        - name: MSSQL_SA_PASSWORD
          value: Id3nt!tyIQ2026
        - name: CATALINA_OPTS
          value: -Xmx2048M
        image: 192.168.0.236:5000/sailpoint-docker:latest
        imagePullPolicy: Always
        name: iiq
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /identityiq
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 20
        startupProbe:
          failureThreshold: 60
          httpGet:
            path: /identityiq
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 15
      restartPolicy: Always
