kubernetes-manifests/mssql-fixer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mssql-fixer
  namespace: iiqstack
spec:
  nodeSelector:
    kubernetes.io/hostname: kubernetes3
  containers:
  - name: fixer
    image: busybox
    command: ["sh", "-c", "chown -R 10001:0 /var/opt/mssql && chmod -R 770 /var/opt/mssql && echo PERMISSIONS FIXED"]
    volumeMounts:
    - name: mssql-storage
      mountPath: /var/opt/mssql
  volumes:
  - name: mssql-storage
    persistentVolumeClaim:
      claimName: mssql-persistent-storage-db-0
  restartPolicy: Never
