kubernetes-manifests/mssql-wipe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mssql-wipe
  namespace: iiqstack
spec:
  nodeSelector:
    kubernetes.io/hostname: kubernetes3
  containers:
  - name: wiper
    image: busybox
    command: ["sh", "-c", "rm -rf /var/opt/mssql/* && echo WIPE SUCCESSFUL"]
    volumeMounts:
    - name: mssql-storage
      mountPath: /var/opt/mssql
  volumes:
  - name: mssql-storage
    persistentVolumeClaim:
      claimName: mssql-persistent-storage-db-0
  restartPolicy: Never
